@@ -22,8 +22,12 @@
 
 (gnc:register-configuration-option
  (gnc:make-number-range-option
-  (N_ "Transaction Matcher") (N_ "Match display threshold")
-  "g" (N_ "The minimum score a potential match must have to be displayed in the match list.")
+  ;;(N_ "Transaction Matcher") 
+  (N_ "Online Banking & Importing")
+  (N_ "Match display threshold")
+  ;; Please leave this sorting argument at no less than "d" since
+  ;; other (optional) items might want to appear in front of it.
+  "d" (N_ "The minimum score a potential match must have to be displayed in the match list.")
   1.0 ;; default
   0.0 ;; lower bound
   6.0 ;; upper bound
@@ -33,8 +37,10 @@
 
 (gnc:register-configuration-option
  (gnc:make-number-range-option
-  (N_ "Transaction Matcher") (N_ "Auto-ADD threshold")
-  "g" (N_ "A transaction whose best match's score is in the red zone (above the display threshold but below or equal to the Auto-ADD threshold) will be ADDed by default.")
+  ;;(N_ "Transaction Matcher") 
+  (N_ "Online Banking & Importing")
+  (N_ "Auto-ADD threshold")
+  "e" (N_ "A transaction whose best match's score is in the red zone (above the display threshold but below or equal to the Auto-ADD threshold) will be ADDed by default.")
   3.0 ;; default
   1.0 ;; lower bound
   6.0 ;; upper bound
@@ -44,18 +50,22 @@
 
 (gnc:register-configuration-option
  (gnc:make-number-range-option
-  (N_ "Transaction Matcher") (N_ "Auto-CLEAR threshold")
-  "g" (N_ "A transaction whose best match's score is in the green zone (above or equal to the Auto-CLEAR threshold) will be CLEARed by default.")
+  ;;(N_ "Transaction Matcher") 
+  (N_ "Online Banking & Importing")
+  (N_ "Auto-CLEAR threshold")
+  "f" (N_ "A transaction whose best match's score is in the green zone (above or equal to the Auto-CLEAR threshold) will be CLEARed by default.")
   6.0 ;; default
   1.0 ;; lower bound
-  10.0 ;; upper bound
+  12.0 ;; upper bound
   0.0 ;; number of decimals
   1.0 ;; step size
   ))
 
 (gnc:register-configuration-option
  (gnc:make-number-range-option
-  (N_ "Transaction Matcher") (N_ "Commercial ATM fees threshold")
+  ;;(N_ "Transaction Matcher") 
+  (N_ "Online Banking & Importing")
+  (N_ "Commercial ATM fees threshold")
   "g" (N_ "In some places commercial ATMs (not belonging to a financial institution) are installed in places like convienience store.  These ATM add its fee directly to the amount instead of showing up as a separate transaction or in your monthly banking fees.  For example, you withdraw 100$, and you are charged 101,50$ plus Interac fees.  If you manually entered that 100$, the amounts won't match.  You should set this to whatever is the maximum such fee in your area (in units of your local currency), so the transaction will be recognised as a match.")
   2.00 ;; default
   0.0 ;; lower bound
